[package]
name = "microbe"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-rayon = "1.2"
wasm-bindgen-futures = "0.4"
rayon = "1.8"
console_error_panic_hook = "0.1.2"
web-sys = { version = "0.3", features = [
  'console',
  'Performance'
] }
js-sys = { version = "0.3" }